--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
     <title></title>
   </head>
   <body>
     <p>
       Hello World!
     </p>
+    <p>
+      Upload a file to find how many of each word are in it.
+    </p>
+    <p>
+      <form method="post" enctype="multipart/form-data">
+      <label for="textfile">txt file:</label>
+      <input type="file"
+             id="textfile" name="textfile"
+             accept='.txt'>
+      <input type="submit">
+    </form>
   </body>
 </html>
