finalized header layout

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>
       Rachel Purton's Portfolio
     </title>
@@ -12,14 +13,26 @@
   <body>
     <div class="header">
       <div class="head-content">
+        <img src="https://avatars1.githubusercontent.com/u/24920973?s=400&u=894caf1d42505423711e35f0edc505eeaea37929&v=4" />
         <h1>
           Hi, I'm Rachel.<br>
           I make websites and design stuff.
         </h1>
 
-        <p>
+        <p class="intro">
           I have a diverse set of skills, with a background in design that translates into my love for HTML + CSS + JS. I have experience with PHP and custom WordPress development, node.js, and Linux server administration.
         </p>
+
+        <p class="social">
+          <a class="button" href=#form>Say Hello</a>
+          <a href="https://github.com/rpurton"><i class="fab fa-github fa-lg"></i></a>
+          <a href="https://www.linkedin.com/in/rachelpurton/"><i class="fab fa-linkedin fa-lg"></i></a>
+        </p>
+
+        <p>
+
+        </p>
+
       </div>
     </div>
 
