updated image links for live

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="grid-wrap">
 
       <div class="item">
-        <img src="file:///Users/rpurton/Documents/rpurtondesign/rpurtondesign/images/shiftawake.png">
+        <img src="/images/shiftawake.png">
           <div class="overlay">
             <div>
               <h2>
@@ -64,7 +64,7 @@
       </div>
 
       <div class="item">
-        <img src="file:///Users/rpurton/Documents/rpurtondesign/rpurtondesign/images/admission.png">
+        <img src="/images/admission.png">
         <div class="overlay">
           <div>
             <h2>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="item">
-        <img src="file:///Users/rpurton/Documents/rpurtondesign/rpurtondesign/images/presidentialsearch.png">
+        <img src="/images/presidentialsearch.png">
         <div class="overlay">
           <div>
             <h2>
