--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="svgstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <script src="scripts.js"></script>
     <title>
       Rachel Purton's Portfolio
@@ -13,9 +18,19 @@
   </head>
   <body>
     <div id="topmenu" class="nav-colored nav-transparent">
-      <a href="https://github.com/rpurton"><i class="fab fa-github fa-lg"></i></a>
-      <a href="https://www.linkedin.com/in/rachelpurton/"><i class="fab fa-linkedin fa-lg"></i></a>
-      <a class="button" href=#form>Say Hello</a>
+      <a href="https://github.com/rpurton" aria-label="github"><i class="fab fa-github fa-lg"></i></a>
+      <a href="https://www.linkedin.com/in/rachelpurton/" aria-label="linkedin"><i class="fab fa-linkedin fa-lg"></i></a>
+
+      <script language="JavaScript" type="text/javascript">
+      var part1 = "rpurton87";
+      var part2 = Math.pow(2,6);
+      var part3 = String.fromCharCode(part2);
+      var part4 = "gmail.com";
+      var part5 = part1 + String.fromCharCode(part2) + part4;
+      document.write("<a href=" + "mai" + "lto" + ":"
+      + part5 + " class='button'>Say Hello</a>");
+      </script>
+
     </div>
 
     <div class="animation">
@@ -30,7 +45,7 @@
 
     <div class="header">
       <div class="head-content">
-        <img src="https://avatars1.githubusercontent.com/u/24920973?s=400&u=894caf1d42505423711e35f0edc505eeaea37929&v=4" />
+        <img alt="rachel headshot" src="images/RP-new-square.jpg" />
         <h1>
           Hi, I'm Rachel.<br>
           I make websites and design stuff.
@@ -40,87 +55,82 @@
           I have a diverse set of skills, with a background in design that translates into my love for HTML + CSS + JS. I have experience with PHP and custom WordPress development, node.js, and Linux server administration.
         </p>
 
-<!--          <a class="button" href=#form>Say Hello</a> -->
-
       </div>
     </div>
-
 
     <div class="grid-wrap">
 
       <div class="item">
-        <img src="/images/shiftawake.png">
+        <img src="images/browsermicrosite.png" alt="JCU microsites">
+        <div class="overlay">
+          <div>
+            <h2>JCU Microsites</h2>
+            <p>
+              Microsites I developed to highlight specific programs/majors at JCU and drive enrollment.
+            <p>
+              <a href="https://microsites.jcu.edu/boler/index2.php">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images/browsershiftawake.png" alt="shift awake homepage">
           <div class="overlay">
             <div>
-              <h2>
-               <a target="_blank" href="https://www.shiftawake.com">Shift Awake Group</a>
-             </h2>
+              <h2>Shift Awake Group</h2>
              <p>
-               I started a new website for my client to promote and run her new business.
+               A client site I developed to promote her business.
               <p>
-                <a target="_blank" href="https://www.shiftawake.com">View site <i class="fas fa-caret-right"></i></a>
+                <a href="https://shiftawake.com">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
             </div>
           </div>
       </div>
 
       <div class="item">
-        <img src="/images/admission.png">
+        <img src="images/browseradmission.png" alt="admission homepage">
+            <div class="overlay">
+              <div>
+                <h2>JCU Admission</h2>
+                <p>
+                  I redesigned the JCU Admission site for better user experience for prospective students. This site launch created a significant increase in application numbers.
+                 <p>
+                   <a href="http://sites.jcu.edu/admission">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+              </div>
+            </div>
+      </div>
+
+      <div class="item">
+        <img src="images/browserpresident.png" alt="presidential search screenshot">
         <div class="overlay">
           <div>
-            <h2>
-             <a target="_blank" href="http://sites.jcu.edu/admission">JCU Admission</a>
-            </h2>
+            <h2>New President Announcement</h2>
             <p>
-              I redesigned the JCU Admission site for better user experience for prospective students. This site launch created a significant increase in application numbers.
+              A landing page I developed to announce the selection of JCU's new president.
+            <p>
+              <a href="https://presidentialsearch.jcu.edu">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images/printdesign.png" alt="previous design work">
+        <div class="overlay">
+          <div>
+            <h2>Previous design work</h2>
+            <p><a href="https://www.behance.net/rpurton">View my behance portfolio</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images/browserboler.png" alt="landing page for Boler College">
+        <div class="overlay">
+          <div>
+            <h2>Part-Time MBA</h2>
              <p>
-               <a target="_blank" href="http://sites.jcu.edu/admission">View site <i class="fas fa-caret-right"></i></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="/images/presidentialsearch.png">
-        <div class="overlay">
-          <div>
-            <h2>
-              <a target="_blank" href="https://presidentialsearch.jcu.edu">New President Announcement</a>
-            </h2>
-            <p>
-              The landing page I created to announce the selection of JCU's new president.
-            <p>
-              <a target="_blank" href="https://presidentialsearch.jcu.edu">View site <i class="fas fa-caret-right"></i></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="https://www.africada.com/media/fotos/_1_1446914355.jpg">
-        <div class="overlay">
-          <div>
-            <h2>
-             microsite
-            </h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="http://nebula.wsimg.com/01ce6f5a017ee230ded17188cce2e5ff?AccessKeyId=32163D6863A25A555708&disposition=0&alloworigin=1">
-        <div class="overlay">
-          <div>
-            <h2>
-             list shit webapp
-            </h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="https://vetstreet.brightspotcdn.com/dims4/default/6c59745/2147483647/thumbnail/645x380/quality/90/?url=https%3A%2F%2Fvetstreet-brightspot.s3.amazonaws.com%2F09%2F7a%2F176e1c0644c6952642997fb17f91%2Fwhippet-ap-hfjk7y-645-x-380.jpg">
-        <div class="overlay">
-          <div>
-            <h2>
-             other js project?
+               A landing page promoting the Part-Time MBA for the Boler College of Business.
+             <p>
+             <a href="https://microsites.jcu.edu/parttimemba">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
             </h2>
           </div>
         </div>
@@ -128,8 +138,20 @@
 
     </div>
 
-
-
+<div class="contact">
+  <p>I'm currently interested in new opportunities, and I'm also accepting new clients for website and webapp projects. <p>If you'd like to get in touch, please
+    <script language="JavaScript" type="text/javascript">
+    var part1 = "rpurton87";
+    var part2 = Math.pow(2,6);
+    var part3 = String.fromCharCode(part2);
+    var part4 = "gmail.com";
+    var part5 = part1 + String.fromCharCode(part2) + part4;
+    document.write("<a href=" + "mai" + "lto" + ":"
+    + part5 + ">email me</a>");
+    </script>
+    or send me a <a href="https://www.linkedin.com/in/rachelpurton/">LinkedIn message</a>. Thanks!
+  </p>
+</div>
 
   </body>
 </html>
