added svgstyles into main stylesheet...why did i ever have two

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="svgstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -74,14 +73,14 @@
       </div>
 
       <div class="item">
-        <img src="images/browsershiftawake.png" alt="shift awake homepage">
+        <img src="images/.png" alt="honeymoon grille homepage">
           <div class="overlay">
             <div>
-              <h2>Shift Awake Group</h2>
+              <h2>Honeymoon Grille</h2>
              <p>
-               A client site I developed to promote her business.
+               Example of freelance/client work. Basic WordPress site with a few customizations.
               <p>
-                <a href="https://shiftawake.com">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+                <a href="https://honeymoongrille.com">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
             </div>
           </div>
       </div>
@@ -92,9 +91,9 @@
               <div>
                 <h2>JCU Admission</h2>
                 <p>
-                  I redesigned the JCU Admission site for better user experience for prospective students. This site launch created a significant increase in application numbers.
+                  I redesigned the JCU Admission site for better user experience, especially on mobile, for prospective students. This site launch created a significant increase in application numbers.
                  <p>
-                   <a href="http://sites.jcu.edu/admission">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+                   <a href="https://web.archive.org/web/20171217075501/http://sites.jcu.edu/admission/pages/visit/">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
               </div>
             </div>
       </div>
@@ -139,7 +138,9 @@
     </div>
 
 <div class="contact">
-  <p>I'm currently interested in new opportunities, and I'm also accepting new clients for website and webapp projects. <p>If you'd like to get in touch, please
+  <p>I'm currently interested in new opportunities, especially in the Portland and Seattle areas.
+    <p>I'm also accepting new clients for website and webapp projects.
+      <p>If you'd like to get in touch, please
     <script language="JavaScript" type="text/javascript">
     var part1 = "rpurton87";
     var part2 = Math.pow(2,6);
