--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </h1>
 
         <p class="intro">
-          I have a diverse set of skills, with a background in design that translates into my love for HTML + CSS + JS. I have experience with PHP and custom WordPress development, node.js, and Linux server administration.
+          I have a diverse set of skills, with a background in design and a love for HTML + CSS + JS. I have experience with PHP and custom WordPress development, node.js, and Linux server administration.
         </p>
 
       </div>
