add honeymoon, clean up images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         <p class="intro">
           I have a diverse set of skills, with a background in design and passion for frontend development. I have experience with PHP and custom WordPress development, node.js, and Linux server administration.
         </p>
-        test again
 
       </div>
     </div>
@@ -74,7 +73,7 @@
       </div>
 
       <div class="item">
-        <img src="images/.png" alt="honeymoon grille homepage">
+        <img src="images/browserhoneymoon.png" alt="honeymoon grille homepage">
           <div class="overlay">
             <div>
               <h2>Honeymoon Grille</h2>
