project updates, css tweaks, accessibility fixes

--- a/index.html
+++ b/index.html
@@ -15,144 +15,146 @@
       Rachel Purton's Portfolio
     </title>
   </head>
+
   <body>
-    <div id="topmenu" class="nav-colored nav-transparent">
-      <a href="https://github.com/rpurton" aria-label="github"><i class="fab fa-github fa-lg"></i></a>
-      <a href="https://www.linkedin.com/in/rachelpurton/" aria-label="linkedin"><i class="fab fa-linkedin fa-lg"></i></a>
+    <header>
+      <nav aria-label="Main Navigation">
+        <div id="topmenu" class="nav-colored nav-transparent">
+          <a href="https://github.com/rpurton" aria-label="github"><i class="fab fa-github fa-lg"></i></a>
+          <a href="https://www.linkedin.com/in/rachelpurton/" aria-label="linkedin"><i class="fab fa-linkedin fa-lg"></i></a>
 
-      <script language="JavaScript" type="text/javascript">
-      var part1 = "rpurton87";
-      var part2 = Math.pow(2,6);
-      var part3 = String.fromCharCode(part2);
-      var part4 = "gmail.com";
-      var part5 = part1 + String.fromCharCode(part2) + part4;
-      document.write("<a href=" + "mai" + "lto" + ":"
-      + part5 + " class='button'>Say Hello</a>");
-      </script>
+          <script language="JavaScript" type="text/javascript">
+          var part1 = "rpurton87";
+          var part2 = Math.pow(2,6);
+          var part3 = String.fromCharCode(part2);
+          var part4 = "gmail.com";
+          var part5 = part1 + String.fromCharCode(part2) + part4;
+          document.write("<a href=" + "mai" + "lto" + ":"
+          + part5 + " class='button'>Say Hello</a>");
+          </script>
 
-    </div>
+        </div>
+      </nav>
 
-    <div class="animation">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300 1000">
-          <polygon id="shape1" class="st0" points="343.9 360.4 374.6 266.1 282.5 303 190.4 339.9 159.8 434.2 129.1 528.6 221.2 491.7 313.2 454.7 "/>
-          <polygon id="shape2" class="st0" points="444.4 393.8 475 299.5 383 336.4 290.9 373.3 260.2 467.7 229.6 562 321.6 525.1 413.7 488.2 "/>
-          <polygon id="shape4" class="st0" points="546.4 393.8 577 299.5 485 336.4 392.9 373.3 362.2 467.7 331.6 562 423.6 525.1 515.7 488.2 "/>
-          <polygon id="shape5" class="st0" points="537.8 166.5 568.5 72.1 476.4 109 384.3 146 353.7 240.3 323 334.7 415.1 297.7 507.1 260.8 "/>
-          <polygon id="shape6" class="st0" points="699.8 242.8 730.4 148.4 638.3 185.3 546.3 222.3 515.6 316.6 484.9 411 577 374 669.1 337.1 "/>
-        </svg>
-    </div>
+      <div class="animation">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300 1000">
+            <polygon id="shape1" class="st0" points="343.9 360.4 374.6 266.1 282.5 303 190.4 339.9 159.8 434.2 129.1 528.6 221.2 491.7 313.2 454.7 "/>
+            <polygon id="shape2" class="st0" points="444.4 393.8 475 299.5 383 336.4 290.9 373.3 260.2 467.7 229.6 562 321.6 525.1 413.7 488.2 "/>
+            <polygon id="shape3" class="st0" points="546.4 393.8 577 299.5 485 336.4 392.9 373.3 362.2 467.7 331.6 562 423.6 525.1 515.7 488.2 "/>
+            <polygon id="shape4" class="st0" points="537.8 166.5 568.5 72.1 476.4 109 384.3 146 353.7 240.3 323 334.7 415.1 297.7 507.1 260.8 "/>
+            <polygon id="shape5" class="st0" points="699.8 242.8 730.4 148.4 638.3 185.3 546.3 222.3 515.6 316.6 484.9 411 577 374 669.1 337.1 "/>
 
-    <div class="header">
-      <div class="head-content">
-        <img alt="rachel headshot" src="images/RP-new-square.jpg" />
-        <h1>
-          Hi, I'm Rachel.<br>
-          I make websites and design stuff.
-        </h1>
-
-        <p class="intro">
-          I have a diverse set of skills, with a background in design and passion for frontend development. I have experience with PHP and custom WordPress development, node.js, and Linux server administration.
-        </p>
-
+          </svg>
       </div>
-    </div>
+    </header>
 
-    <div class="grid-wrap">
+    <main>
+      <div class="header">
+        <div class="head-content">
+          <img alt="rachel headshot" src="images/RP-new-square.jpg" />
+          <h1>
+            Hi, I'm Rachel.<br>
+          </h1>
 
-      <div class="item">
-        <img src="images/browsermicrosite.png" alt="JCU microsites">
-        <div class="overlay">
-          <div>
-            <h2>JCU Microsites</h2>
-            <p>
-              Microsites I developed to highlight specific programs/majors at JCU and drive enrollment.
-            <p>
-              <a href="https://microsites.jcu.edu/boler/index2.php">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
-          </div>
+          <p class="intro">
+            I have a diverse set of skills, with a background in design and passion for frontend development. I have experience with custom WordPress and Drupal development, as well as a variety of other projects. I’m willing to dive into almost anything, learn, and get my hands dirty. I thrive on problem solving, research, and asking why before writing any code.
+          </p>
+
         </div>
       </div>
 
-      <div class="item">
-        <img src="images/browserhoneymoon.png" alt="honeymoon grille homepage">
+      <div class="grid-wrap">
+
+        <div class="item">
+          <img src="images/browsermicrosite.png" alt="JCU microsites">
           <div class="overlay">
             <div>
-              <h2>Honeymoon Grille</h2>
-             <p>
-               Example of freelance/client work. Basic WordPress site with a few customizations.
+              <h2>
+                <a href="https://microsites.jcu.edu/boler/index2.php">JCU Microsites</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+              </h2>
               <p>
-                <a href="https://honeymoongrille.com">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+                Microsites I developed using CSS Grid to highlight specific programs.
             </div>
           </div>
-      </div>
+        </div>
 
-      <div class="item">
-        <img src="images/browseradmission.png" alt="admission homepage">
+        <div class="item">
+          <img src="images/browseradmission.png" alt="admission homepage">
+              <div class="overlay">
+                <div>
+                  <h2>
+                    <a href="https://web.archive.org/web/20171217075501/http://sites.jcu.edu/admission/pages/visit/">JCU Admission</a>
+                    &nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+                  </h2>
+                  <p>
+                    I developed a mobile responsive WordPress theme with custom post types for the JCU admission site in 2018, resulting in increased traffic and student applications.
+                </div>
+              </div>
+        </div>
+
+        <div class="item">
+          <img src="images/browserhoneymoon.png" alt="honeymoon grille homepage">
             <div class="overlay">
               <div>
-                <h2>JCU Admission</h2>
-                <p>
-                  I redesigned the JCU Admission site for better user experience, especially on mobile, for prospective students. This site launch created a significant increase in application numbers.
-                 <p>
-                   <a href="https://web.archive.org/web/20171217075501/http://sites.jcu.edu/admission/pages/visit/">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+                <h2>
+                  <a href="https://honeymoongrille.com">Honeymoon Grille</a>
+                  &nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+                </h2>
+               <p>
+                 Basic WordPress site I launched and maintain for a client, with a few customizations.
               </div>
             </div>
-      </div>
+        </div>
 
-      <div class="item">
-        <img src="images/browserpresident.png" alt="presidential search screenshot">
-        <div class="overlay">
-          <div>
-            <h2>New President Announcement</h2>
-            <p>
-              A landing page I developed to announce the selection of JCU's new president.
-            <p>
-              <a href="https://presidentialsearch.jcu.edu">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+        <div class="item">
+          <img src="images/browserboler.png" alt="landing page for Boler College">
+          <div class="overlay">
+            <div>
+              <h2>
+                <a href="https://microsites.jcu.edu/parttimemba">Part-Time MBA</a>
+                &nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+              </h2>
+               <p>
+                 A landing page promoting the Part-Time MBA for the Boler College of Business.
+              </h2>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="item">
-        <img src="images/printdesign.png" alt="previous design work">
-        <div class="overlay">
-          <div>
-            <h2>Previous design work</h2>
-            <p><a href="https://www.behance.net/rpurton">View my behance portfolio</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+        <div class="item">
+          <img src="images/printdesign.png" alt="previous design work">
+          <div class="overlay">
+            <div>
+              <h2>
+                <a href="https://www.behance.net/rpurton">Previous design work</a>
+                &nbsp;&nbsp;<i class="fas fa-caret-right"></i>
+              </h2>
+              <p>Behance portfolio with design work from 2010-2016.</a>
+            </div>
           </div>
         </div>
+
       </div>
+    </main>
 
-      <div class="item">
-        <img src="images/browserboler.png" alt="landing page for Boler College">
-        <div class="overlay">
-          <div>
-            <h2>Part-Time MBA</h2>
-             <p>
-               A landing page promoting the Part-Time MBA for the Boler College of Business.
-             <p>
-             <a href="https://microsites.jcu.edu/parttimemba">View site</a>&nbsp;&nbsp;<i class="fas fa-caret-right"></i>
-            </h2>
-          </div>
-        </div>
+    <footer>
+      <div class="contact">
+        <p>I'm currently interested in new opportunities, especially in the Pacific Northwest.
+          <p>I'm also accepting new clients for website and webapp projects.
+            <p>If you'd like to get in touch, please
+          <script language="JavaScript" type="text/javascript">
+          var part1 = "rpurton87";
+          var part2 = Math.pow(2,6);
+          var part3 = String.fromCharCode(part2);
+          var part4 = "gmail.com";
+          var part5 = part1 + String.fromCharCode(part2) + part4;
+          document.write("<a href=" + "mai" + "lto" + ":"
+          + part5 + ">email me</a>");
+          </script>
+          or <a href="https://www.linkedin.com/in/rachelpurton/">send me a LinkedIn message</a>. Thanks!
+        </p>
       </div>
-
-    </div>
-
-<div class="contact">
-  <p>I'm currently interested in new opportunities, especially in the Portland and Seattle areas.
-    <p>I'm also accepting new clients for website and webapp projects.
-      <p>If you'd like to get in touch, please
-    <script language="JavaScript" type="text/javascript">
-    var part1 = "rpurton87";
-    var part2 = Math.pow(2,6);
-    var part3 = String.fromCharCode(part2);
-    var part4 = "gmail.com";
-    var part5 = part1 + String.fromCharCode(part2) + part4;
-    document.write("<a href=" + "mai" + "lto" + ":"
-    + part5 + ">email me</a>");
-    </script>
-    or send me a <a href="https://www.linkedin.com/in/rachelpurton/">LinkedIn message</a>. Thanks!
-  </p>
-</div>
+    </footer>
 
   </body>
 </html>
