--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </h1>
 
           <p class="intro">
-            I have a diverse set of skills, with a background in design and passion for frontend development. I have experience with custom WordPress and Drupal development, as well as a variety of other projects. I’m willing to dive into almost anything, learn, and get my hands dirty. I thrive on problem solving, research, and asking why before writing any code.
+            I'm a motivated developer and designer with proven history of creating custom, accessible websites and features. I'm experienced with HTML5, CSS3, JS, PHP, and WordPress. I'm willing to dive into any project and I'm always learning something new.
           </p>
 
         </div>
