remove google and last name

--- a/index.html
+++ b/index.html
@@ -11,18 +11,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <script src="scripts.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167769257-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-167769257-1');
-    </script>
 
     <title>
-      Rachel Purton's Portfolio
+      Rachel's Portfolio
     </title>
   </head>
 
@@ -34,13 +25,14 @@
           <a href="https://www.linkedin.com/in/rachelpurton/" aria-label="linkedin"><i class="fab fa-linkedin fa-lg"></i></a>
 
           <script language="JavaScript" type="text/javascript">
-          var part1 = "rpurton87";
-          var part2 = Math.pow(2,6);
-          var part3 = String.fromCharCode(part2);
-          var part4 = "gmail.com";
-          var part5 = part1 + String.fromCharCode(part2) + part4;
-          document.write("<a href=" + "mai" + "lto" + ":"
-          + part5 + " class='button'>Say Hello</a>");
+            var part0 = "rpur"
+            var part1 = "ton87";
+            var part2 = Math.pow(2,6);
+            var part3 = String.fromCharCode(part2);
+            var part4 = "gmail.com";
+            var part5 = part0 + part1 + String.fromCharCode(part2) + part4;
+            document.write("<a href=" + "mai" + "lto" + ":"
+            + part5 + " class='button'>Say Hello</a>");
           </script>
 
         </div>
@@ -152,15 +144,16 @@
         <p>I'm currently interested in new opportunities, especially in the Pacific Northwest.
           <p>I'm also accepting new clients for website and webapp projects.
             <p>If you'd like to get in touch, please
-          <script language="JavaScript" type="text/javascript">
-          var part1 = "rpurton87";
-          var part2 = Math.pow(2,6);
-          var part3 = String.fromCharCode(part2);
-          var part4 = "gmail.com";
-          var part5 = part1 + String.fromCharCode(part2) + part4;
-          document.write("<a href=" + "mai" + "lto" + ":"
-          + part5 + ">email me</a>");
-          </script>
+            <script language="JavaScript" type="text/javascript">
+              var part0 = "rpur"
+              var part1 = "ton87";
+              var part2 = Math.pow(2,6);
+              var part3 = String.fromCharCode(part2);
+              var part4 = "gmail.com";
+              var part5 = part1 + String.fromCharCode(part2) + part4;
+              document.write("<a href=" + "mai" + "lto" + ":"
+              + part5 + ">email me</a>");
+            </script>
           or <a href="https://www.linkedin.com/in/rachelpurton/">send me a LinkedIn message</a>. Thanks!
         </p>
       </div>
