--- a/index.html
+++ b/index.html
@@ -141,18 +141,7 @@
 
     <footer>
       <div class="contact">
-        <p>If you'd like to get in touch, please
-          <script language="JavaScript" type="text/javascript">
-            var part0 = "rpur"
-            var part1 = "ton87";
-            var part2 = Math.pow(2,6);
-            var part3 = String.fromCharCode(part2);
-            var part4 = "gmail.com";
-            var part5 = part1 + String.fromCharCode(part2) + part4;
-            document.write("<a href=" + "mai" + "lto" + ":"
-            + part5 + ">email me</a>");
-          </script>
-        or <a href="https://www.linkedin.com/in/rachelpurton/">send me a LinkedIn message</a>. Thanks!
+        <p>If you'd like to get in touch, please <a href="https://www.linkedin.com/in/rachelpurton/">send me a LinkedIn message</a>. Thanks!
         </p>
       </div>
     </footer>
